// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`createJsonFixer DELETE operation should delete a deeply nested object property 1`] = `
Array [
  Object {
    "range": Array [
      37,
      187,
    ],
    "text": "",
    "type": "remove",
  },
]
`;

exports[`createJsonFixer DELETE operation should delete a deeply nested object property with preceding comma if this is last property 1`] = `
Array [
  Object {
    "range": Array [
      75,
      76,
    ],
    "text": "",
    "type": "remove",
  },
  Object {
    "range": Array [
      77,
      235,
    ],
    "text": "",
    "type": "remove",
  },
]
`;

exports[`createJsonFixer DELETE operation should delete a property with trailing comma 1`] = `
Array [
  Object {
    "range": Array [
      2,
      34,
    ],
    "text": "",
    "type": "remove",
  },
]
`;

exports[`createJsonFixer INSERT operation should handle special characters in property names 1`] = `
Array [
  Object {
    "range": Array [
      12,
      12,
    ],
    "text": "
    \\"@odata.context\\": {
      \\"value\\": \\"test\\"
    }
  ",
    "type": "insert",
  },
]
`;

exports[`createJsonFixer INSERT operation should insert a new property into an empty object 1`] = `
Array [
  Object {
    "range": Array [
      13,
      13,
    ],
    "text": "
    \\"flexEnabled\\": true
  ",
    "type": "insert",
  },
]
`;

exports[`createJsonFixer INSERT operation should insert nested properties for a deep path 1`] = `
Array [
  Object {
    "range": Array [
      13,
      13,
    ],
    "text": "
    \\"routing\\": {
      \\"targets\\": {
        \\"IncidentsObjectPage\\": {
          \\"options\\": {
            \\"settings\\": {
              \\"controlConfiguration\\": {
                \\"incidentFlow/@com.sap.vocabularies.UI.v1.LineItem\\": {
                  \\"tableSettings\\": {
                    \\"creationMode\\": {
                      \\"name\\": \\"NewRow\\"
                    }
                  }
                }
              }
            }
          }
        }
      }
    },",
    "type": "insert",
  },
]
`;

exports[`createJsonFixer Operation inference should infer DELETE when no missingSegments and value is undefined 1`] = `
Array [
  Object {
    "range": Array [
      0,
      17,
    ],
    "text": "",
    "type": "remove",
  },
]
`;

exports[`createJsonFixer Operation inference should infer INSERT when missingSegments exist 1`] = `
Array [
  Object {
    "range": Array [
      12,
      12,
    ],
    "text": "
    \\"newProp\\": \\"test\\"
  ",
    "type": "insert",
  },
]
`;

exports[`createJsonFixer Operation inference should infer UPDATE when no missingSegments and value is defined 1`] = `
Array [
  Object {
    "range": Array [
      12,
      17,
    ],
    "text": "true",
    "type": "replace",
  },
]
`;

exports[`createJsonFixer UPDATE operation should update a boolean value 1`] = `
Array [
  Object {
    "range": Array [
      28,
      33,
    ],
    "text": "true",
    "type": "replace",
  },
]
`;

exports[`createJsonFixer UPDATE operation should update a number value 1`] = `
Array [
  Object {
    "range": Array [
      10,
      12,
    ],
    "text": "100",
    "type": "replace",
  },
]
`;

exports[`createJsonFixer UPDATE operation should update a string value 1`] = `
Array [
  Object {
    "range": Array [
      10,
      21,
    ],
    "text": "\\"New Title\\"",
    "type": "replace",
  },
]
`;

exports[`createJsonFixer UPDATE operation should update an object value 1`] = `
Array [
  Object {
    "range": Array [
      11,
      24,
    ],
    "text": "{
  \\"enabled\\": true,
  \\"count\\": 5
}",
    "type": "replace",
  },
]
`;
